--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,7 @@
     "require": {
         "php": ">=5.5.9",
         "cakephp/cakephp": ">=3.2.0 <4.0",
-        "intervention/image": "^2.3",
-        "intervention/imagecache": "^2.3"
+        "intervention/image": "^2.3"
     },
     "require-dev": {
         "cakephp/cakephp-codesniffer": "2.*"
