--- a/.travis.yml
+++ b/.travis.yml
@@ -13,13 +13,21 @@ matrix:
     - php: 7.0
       env: PHPCS=1
 
+    - php: 7.0
+      env: COVERAGE=1
+
 install:
   - printf "\n" | pecl install imagick
   - composer self-update
   - composer install --prefer-dist --no-interaction
 
 script:
+  - if [[ $PHPCS != '1' && $COVERAGE != '1' ]]; then phpunit; fi
   - if [[ $PHPCS = 1 ]]; then vendor/bin/phpcs -p --extensions=php,ctp,js,css --standard=vendor/cakephp/cakephp-codesniffer/CakePHP --ignore=*.min.css,*.min.js ./config ./src ./tests; fi
+  - if [[ $COVERAGE = 1 ]]; then phpunit --coverage-clover=clover.xml; fi
+  
+after_success:
+  - if [[ $COVERAGE = 1 ]]; then bash <(curl -s https://codecov.io/bash); fi
 
 notifications:
   email: false
