--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ install:
   - composer install --prefer-dist --no-interaction
 
 script:
-  - if [[ $PHPCS != '1' && $COVERAGE != '1' ]]; then phpunit; fi
+  - if [[ $PHPCS != '1' && $COVERAGE != '1' ]]; then phpunit --exclude-group imageEquals; fi
   - if [[ $PHPCS = 1 ]]; then vendor/bin/phpcs -p --extensions=php,ctp,js,css --standard=vendor/cakephp/cakephp-codesniffer/CakePHP --ignore=*.min.css,*.min.js ./config ./src ./tests; fi
   - if [[ $COVERAGE = 1 ]]; then phpunit --coverage-clover=clover.xml; fi
   
