--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ install:
 script:
   - if [[ $PHPCS != '1' && $COVERAGE != '1' ]]; then phpunit --exclude-group imageEquals; fi
   - if [[ $PHPCS = 1 ]]; then vendor/bin/phpcs -p --extensions=php,ctp,js,css --standard=vendor/cakephp/cakephp-codesniffer/CakePHP --ignore=*.min.css,*.min.js ./config ./src ./tests; fi
-  - if [[ $COVERAGE = 1 ]]; then phpunit --coverage-clover=clover.xml; fi
+  - if [[ $COVERAGE = 1 ]]; then phpunit --exclude-group imageEquals --coverage-clover=clover.xml; fi
   
 after_success:
   - if [[ $COVERAGE = 1 ]]; then bash <(curl -s https://codecov.io/bash); fi
