--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "intervention/image": "^2.3"
     },
     "require-dev": {
-        "cakephp/cakephp-codesniffer": "2.*"
+        "cakephp/cakephp-codesniffer": "2.*",
+        "phpunit/phpunit": "^5.7|^6.0"
     },
     "autoload": {
         "psr-4": {
