--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "intervention/image": "^2.3"
     },
     "require-dev": {
-        "cakephp/cakephp-codesniffer": "2.*",
+        "cakephp/cakephp-codesniffer": "^3.0",
         "phpunit/phpunit": "^5.7|^6.0"
     },
     "autoload": {
