fixed for cakephp 3.4

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -11,6 +11,11 @@
 		<testsuite name="cakephp-thumber Test Cases">
 			<directory>./tests/TestCase</directory>
 		</testsuite>
+        
+        <testsuite name="cakephp3.4">
+			<directory>./tests/TestCase</directory>
+            <exclude>./tests/TestCase/Shell/ThumberShellTest.php</exclude>
+        </testsuite>
 	</testsuites>
     
 	<!-- configure code coverage -->
