--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,9 @@ matrix:
   include:
     - php: 7.0
       env: PHPCS=1
+      
+    - php: 7.0
+      env: driver=gd
 
     - php: 7.0
       env: COVERAGE=1
