renamed the driver environment variable

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ matrix:
       env: PHPCS=1
       
     - php: 7.0
-      env: driver=gd
+      env: thumberDriver=gd
 
     - php: 7.0
       env: COVERAGE=1
