--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     }],
     "require": {
         "php": ">=5.5.9",
-        "cakephp/cakephp": ">=3.4 <3.6",
+        "cakephp/cakephp": ">=3.6 <4",
         "intervention/image": "^2.4",
         "mirko-pagliai/php-tools": "^1.0"
     },
@@ -25,6 +25,7 @@
     },
     "autoload-dev": {
         "psr-4": {
+            "App\\": "tests/test_app/TestApp/",
             "Thumber\\Test\\": "tests"
         }
     }
