--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,9 @@ matrix:
     - php: 7.0
       env: CAKEPHP_VERSION="3.4.*"
 
+    - php: 7.0
+      env: CAKEPHP_VERSION="3.5.*"
+
 install:
   - printf "\n" | pecl install imagick
   - composer self-update
