--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,9 @@
     }],
     "require": {
         "php": ">=5.5.9",
-        "cakephp/cakephp": ">=3.2.0 <4.0",
+        "cakephp/cakephp": "^3.2",
         "intervention/image": "^2.4",
-        "mirko-pagliai/php-tools": "^1.0"
+        "mirko-pagliai/php-tools": "^1.1"
     },
     "require-dev": {
         "cakephp/cakephp-codesniffer": "^3.0",
