--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -8,7 +8,9 @@
     <rule ref="Internal.NoCodeFound">
         <severity>0</severity>
     </rule>
-
+    <rule ref="Generic.PHP.NoSilencedErrors.Discouraged">
+        <severity>0</severity>
+    </rule>
     <rule ref="PSR1.Files.SideEffects.FoundWithSymbols">
         <exclude-pattern>/webroot</exclude-pattern>
     </rule>
