--- a/.travis.yml
+++ b/.travis.yml
@@ -20,10 +20,14 @@ matrix:
     - php: 7.0
       env: COVERAGE=1
 
+    - php: 7.0
+      env: CAKEPHP_VERSION="3.7.*"
+
 install:
   - printf "\n" | pecl install imagick
   - composer self-update
   - composer install --prefer-dist --no-interaction
+  - if [[ ! -z "$CAKEPHP_VERSION" ]]; then composer require --update-with-dependencies cakephp/cakephp:${CAKEPHP_VERSION}; fi
 
 script:
   - if [[ $PHPCS != '1' && $COVERAGE != '1' ]]; then vendor/bin/phpunit --exclude-group imageEquals; fi
