--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "cakephp/cakephp": "^3.7.1",
         "intervention/image": "^2.4",
         "mirko-pagliai/me-tools": "^2.18.6",
+        "mirko-pagliai/php-thumber": "dev-master as 1.0.0",
         "mirko-pagliai/php-tools": "^1.2.8"
     },
     "require-dev": {
