--- a/composer.json
+++ b/composer.json
@@ -9,16 +9,17 @@
         "email": "mirko.pagliai@gmail.com"
     }],
     "require": {
-        "php": ">=5.5.9",
-        "cakephp/cakephp": "^3.7",
+        "php": ">=7.2",
+        "cakephp/cakephp": "4.x-dev",
+        "cakephp/chronos": "2.x-dev as 2.0.0",
         "intervention/image": "^2.4",
-        "mirko-pagliai/me-tools": "^2.18.15",
-        "mirko-pagliai/php-thumber": "^1.0",
-        "mirko-pagliai/php-tools": "^1.2.11"
+        "mirko-pagliai/me-tools": "dev-cakephp4",
+        "mirko-pagliai/php-thumber": "dev-php7",
+        "mirko-pagliai/php-tools": "dev-php7"
     },
     "require-dev": {
-        "cakephp/cakephp-codesniffer": "^3.0",
-        "phpunit/phpunit": "^5.7.14|^6.0"
+        "cakephp/cakephp-codesniffer": "dev-next",
+        "phpunit/phpunit": "^8.0"
     },
     "autoload": {
         "psr-4": {
