--- a/composer.json
+++ b/composer.json
@@ -10,14 +10,13 @@
         }],
     "require": {
         "php": ">=7.2",
-        "cakephp/cakephp": "4.x-dev",
+        "cakephp/cakephp": "^4.0",
         "intervention/image": "^2.4",
-        "mirko-pagliai/me-tools": "dev-cakephp4",
-        "mirko-pagliai/php-thumber": "dev-php7",
-        "mirko-pagliai/php-tools": "dev-php7"
+        "mirko-pagliai/me-tools": "^2.19",
+        "mirko-pagliai/php-thumber": "^1.1"
     },
     "require-dev": {
-        "cakephp/cakephp-codesniffer": "dev-next",
+        "cakephp/cakephp-codesniffer": "^4.0",
         "phpunit/phpunit": "^8.0"
     },
     "autoload": {
