--- a/composer.json
+++ b/composer.json
@@ -5,15 +5,15 @@
     "type": "cakephp-plugin",
     "license": "MIT",
     "authors": [{
-        "name": "Mirko Pagliai",
-        "email": "mirko.pagliai@gmail.com"
-    }],
+            "name": "Mirko Pagliai",
+            "email": "mirko.pagliai@gmail.com"
+        }],
     "require": {
         "php": ">=5.5.9",
         "cakephp/cakephp": "^3.2",
         "intervention/image": "^2.4",
-        "mirko-pagliai/php-thumber": "^1.0",
-        "mirko-pagliai/php-tools": "^1.2.11"
+        "mirko-pagliai/php-thumber": "<1.1",
+        "mirko-pagliai/php-tools": "<1.3"
     },
     "require-dev": {
         "cakephp/cakephp-codesniffer": "^3.0",
