--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,11 @@
         "php": ">=5.5.9",
         "cakephp/cakephp": "^3.2",
         "intervention/image": "^2.4",
-        "mirko-pagliai/php-thumber": "<1.1",
-        "mirko-pagliai/php-tools": "<1.3"
+        "mirko-pagliai/php-thumber": "~1.0.0",
+        "mirko-pagliai/php-tools": "~1.2.11"
     },
     "require-dev": {
-        "cakephp/cakephp-codesniffer": "^3.0",
+        "cakephp/cakephp-codesniffer": "^3.0|^4.0",
         "phpunit/phpunit": "^5.7.14|^6.0"
     },
     "autoload": {
