--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -8,6 +8,9 @@
     <rule ref="Generic.Files.LineLength.TooLong">
         <severity>0</severity>
     </rule>
+    <rule ref="SlevomatCodingStandard.Namespaces.UseFromSameNamespace.UseFromSameNamespace">
+        <severity>0</severity>
+    </rule>
     <rule ref="SlevomatCodingStandard.PHP.ShortList.LongListUsed">
         <severity>0</severity>
     </rule>
