--- a/composer.json
+++ b/composer.json
@@ -4,16 +4,18 @@
     "homepage": "https://github.com/mirko-pagliai/cakephp-thumber",
     "type": "cakephp-plugin",
     "license": "MIT",
-    "authors": [{
+    "authors": [
+        {
             "name": "Mirko Pagliai",
             "email": "mirko.pagliai@gmail.com"
-        }],
+        }
+    ],
     "require": {
         "php": ">=7.2",
         "cakephp/cakephp": "^4.0",
         "intervention/image": "^2.4",
-        "mirko-pagliai/me-tools": "^2.19",
-        "mirko-pagliai/php-thumber": "^1.1"
+        "mirko-pagliai/me-tools": "^2.19.7",
+        "mirko-pagliai/php-thumber": "^1.2"
     },
     "require-dev": {
         "cakephp/cakephp-codesniffer": "^4.0",
