--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "cakephp/cakephp": "^4.0",
         "intervention/image": "^2.4",
         "mirko-pagliai/me-tools": "^2.19.7",
-        "mirko-pagliai/php-thumber": "^1.2"
+        "mirko-pagliai/php-thumber": "^1.2.1",
+        "mirko-pagliai/php-tools": "^1.4.5"
     },
     "require-dev": {
         "cakephp/cakephp-codesniffer": "^4.0",
