--- a/composer.json
+++ b/composer.json
@@ -36,15 +36,14 @@
     "scripts": {
         "check": [
             "@cs-check",
-            "@update-lowest",
-            "@test",
+            "@test-lowest",
             "@composer update",
             "@test",
             "@stan"
         ],
         "cs-check": "phpcs --standard=phpcs.xml.dist",
         "cs-fix": "phpcbf --standard=phpcs.xml.dist",
-        "test": "phpunit",
+        "test": "rm -f -r /tmp/cake* && phpunit",
         "coverage": "XDEBUG_MODE=coverage phpunit --coverage-html=coverage",
         "phpstan": "phpstan.phar analyse",
         "psalm": "psalm.phar",
@@ -54,6 +53,9 @@
             "@psalm"
         ],
         "stan-setup": "cp composer.json composer.backup && composer require --dev phpstan/phpstan:^0.12 psalm/phar:^3.18 && mv composer.backup composer.json",
-        "update-lowest": "@composer update --prefer-lowest"
+        "test-lowest": [
+            "@composer update --prefer-lowest",
+            "@test"
+        ]
     }
 }
