fixed. Uses Composer 1.x

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,7 @@ matrix:
 
 install:
   - printf "\n" | pecl install imagick
+  - composer self-update --rollback
   - composer install --prefer-dist --no-interaction
   - if [ "$dependencies" = "lowest" ]; then composer update --prefer-lowest -n; fi;
   - composer show -i
