--- a/composer.json
+++ b/composer.json
@@ -14,13 +14,13 @@
         "php": ">=7.2",
         "cakephp/cakephp": "^4.0",
         "intervention/image": "^2.4",
-        "mirko-pagliai/me-tools": "^2.19.7",
+        "mirko-pagliai/me-tools": "^2.20",
         "mirko-pagliai/php-thumber": "^1.2.1",
         "mirko-pagliai/php-tools": "^1.4.5"
     },
     "require-dev": {
         "cakephp/cakephp-codesniffer": "^4.0",
-        "phpunit/phpunit": "^8.0"
+        "phpunit/phpunit": "^8.5|^9.0"
     },
     "autoload": {
         "psr-4": {
@@ -36,7 +36,8 @@
     "scripts": {
         "check": [
             "@cs-check",
-            "@test-lowest",
+            "@update-lowest",
+            "@test",
             "@composer update",
             "@test",
             "@stan"
@@ -52,10 +53,7 @@
             "@phpstan",
             "@psalm"
         ],
-        "stan-setup": "cp composer.json composer.backup && composer require --dev phpstan/phpstan:^0.12 psalm/phar:^3.18 && mv composer.backup composer.json",
-        "test-lowest": [
-            "@composer update --prefer-lowest",
-            "@test"
-        ]
+        "stan-setup": "cp composer.json composer.backup && composer require --dev phpstan/phpstan:^0.12 psalm/phar:\"^3.18|^4\" && mv composer.backup composer.json",
+        "update-lowest": "@composer update --prefer-lowest"
     }
 }
