--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,9 @@
         "php": ">=7.2",
         "cakephp/cakephp": "^4.0",
         "intervention/image": "^2.4",
-        "mirko-pagliai/me-tools": "^2.20",
-        "mirko-pagliai/php-thumber": "^1.4"
+        "mirko-pagliai/me-tools": "^2.20.9",
+        "mirko-pagliai/php-thumber": "^1.4",
+        "mirko-pagliai/php-tools": "~1.5.9"
     },
     "require-dev": {
         "cakephp/cakephp-codesniffer": "^4.0",
