--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     },
     "require-dev": {
         "cakephp/cakephp-codesniffer": "^4.0",
-        "phpunit/phpunit": "^8.5.14|^9.1|^9.5"
+        "phpunit/phpunit": "^9.1|^9.5"
     },
     "autoload": {
         "psr-4": {
