--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "cakephp/cakephp": "^4.0",
         "intervention/image": "^2.4",
         "mirko-pagliai/me-tools": "^2.20.9",
-        "mirko-pagliai/php-thumber": "^1.5"ù
+        "mirko-pagliai/php-thumber": "^1.5"
     },
     "require-dev": {
         "cakephp/cakephp-codesniffer": "^4.0",
