--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,9 @@
     },
     "require-dev": {
         "cakephp/cakephp-codesniffer": "^4.0",
-        "phpunit/phpunit": "^9.1|^9.5"
+        "phpunit/phpunit": "^9.1|^9.5",
+        "phpstan/phpstan": "^0.12",
+        "psalm/phar": "^3.18|^4"
     },
     "autoload": {
         "psr-4": {
@@ -48,11 +50,9 @@
         "phpstan": "phpstan.phar analyse",
         "psalm": "psalm.phar --php-version=8.0",
         "stan": [
-            "@stan-setup",
             "@phpstan",
             "@psalm"
         ],
-        "stan-setup": "cp composer.json composer.backup && composer require --dev phpstan/phpstan:^0.12 psalm/phar:\"^3.18|^4\" && mv composer.backup composer.json",
         "update-lowest": "@composer update --prefer-lowest"
     }
 }
