--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
     ],
     "require": {
         "php": ">=7.4",
+        "ext-fileinfo": "*",
         "cakephp/cakephp": "^4.0",
         "intervention/image": "^2.4",
         "mirko-pagliai/me-tools": "^2.20.9",
