--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "cakephp/cakephp": "^4.0",
         "intervention/image": "^2.4",
         "mirko-pagliai/me-tools": "~2.23.1",
-        "mirko-pagliai/php-thumber": "^1.5"
+        "mirko-pagliai/php-thumber": "~1.5.3"
     },
     "require-dev": {
         "cakephp/cakephp-codesniffer": "^4.0",
