--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,8 @@
     "require-dev": {
         "cakephp/cakephp-codesniffer": "^4.0",
         "phpunit/phpunit": "^9.1|^9.5",
-        "phpstan/phpstan": "^1.7",
-        "psalm/phar": "^4.24"
+        "phpstan/phpstan": "^1.10.38",
+        "vimeo/psalm": "^5.15.0"
     },
     "autoload": {
         "psr-4": {
