--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php-version: ['7.4', '8.0', '8.1']
+        php-version: ['7.4', '8.0', '8.1', '8.2']
         prefer-lowest: ['']
         thumber-driver: ['imagick', 'gd']
         include:
@@ -23,6 +23,9 @@ jobs:
             prefer-lowest: 'prefer-lowest'
             thumber-driver: 'imagick'
           - php-version: '8.1'
+            prefer-lowest: 'prefer-lowest'
+            thumber-driver: 'imagick'
+          - php-version: '8.2'
             prefer-lowest: 'prefer-lowest'
             thumber-driver: 'imagick'
           - php-version: '7.4'
@@ -73,7 +76,7 @@ jobs:
             fi
 
         - name: Submit code coverage
-          if: matrix.php-version == '8.0'
+          if: matrix.php-version == '8.1'
           uses: codecov/codecov-action@v2
 
   cs-stan:
@@ -86,7 +89,7 @@ jobs:
         - name: Setup PHP
           uses: shivammathur/setup-php@v2
           with:
-            php-version: '8.0'
+            php-version: '8.1'
             coverage: none
             tools: cs2pr
 
@@ -105,7 +108,7 @@ jobs:
 
         - name: Run psalm
           if: success() || failure()
-          run: vendor/bin/psalm --output-format=github --php-version=8.0
+          run: vendor/bin/psalm --output-format=github --php-version=8.1
 
         - name: Run phpstan
           if: success() || failure()
