--- a/composer.json
+++ b/composer.json
@@ -13,13 +13,14 @@
     "require": {
         "php": ">=8.1",
         "ext-fileinfo": "*",
-        "cakephp/cakephp": "^4.4",
+        "cakephp/cakephp": "^5.0",
         "intervention/image": "^2.4",
-        "mirko-pagliai/php-thumber": "~1.5.3"
+        "mirko-pagliai/php-tools": "~1.9.3",
+        "mirko-pagliai/php-thumber": "~1.6.1"
     },
     "require-dev": {
-        "cakephp/cakephp-codesniffer": "^4.0",
-        "phpunit/phpunit": "^9.1|^9.5",
+        "cakephp/cakephp-codesniffer": "^5.0",
+        "phpunit/phpunit": "^10.1.0 <=10.5.3",
         "phpstan/phpstan": "^1.10.38",
         "vimeo/psalm": "^5.15.0"
     },
@@ -47,8 +48,8 @@
         "cs-fix": "phpcbf --standard=phpcs.xml.dist",
         "test": "rm -f -r /tmp/cake* && phpunit",
         "coverage": "XDEBUG_MODE=coverage phpunit --coverage-html=coverage",
-        "phpstan": "phpstan.phar analyse",
-        "psalm": "psalm.phar --php-version=8.0",
+        "phpstan": "phpstan analyse",
+        "psalm": "psalm --php-version=8.0",
         "stan": [
             "@phpstan",
             "@psalm"
