--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,7 @@
         "ext-fileinfo": "*",
         "cakephp/cakephp": "^5.0",
         "intervention/image": "^2.4",
-        "mirko-pagliai/php-tools": "~1.9.3",
-        "mirko-pagliai/php-thumber": "~1.6.1"
+        "mirko-pagliai/php-tools": "~1.9.3"
     },
     "require-dev": {
         "cakephp/cakephp-codesniffer": "^5.0",
